# dcm

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  mypy.ini  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: ci.yml
dcm/: __init__.py  _globals.py  cli.py  conf.py  diff.py  dir.py  filt.py  info.py  lazyset.py  net.py  node.py  normalize.py  query.py  report.py  route.py  router.py  sync.py  util.py
dcm/reports/: __init__.py  net_report.py  sync_report.py  xfer_report.py
dcm/store/: __init__.py  base.py  local_dir.py  net_repo.py  qr_repo.py
dcm/tests/: conftest.py  test_cli.py  test_conf.py  test_diff.py  test_lazyset.py  test_net.py  test_node.py  test_query.py  test_route.py  test_sync.py
dcm/tests/data/: dicom.tar.bz2  pres_contexts.cfg
dcm/tests/store/: test_local_dir.py  test_net_repo.py  test_repo.py
docs/source/: conf.py  dcm.cli.rst  dcm.conf.rst  dcm.diff.rst  dcm.report.rst  dcm.route.rst  dcm.store.base.rst  dcm.store.rst  modules.rst
