[tool.poetry]
name = "dcm"
version = "0.1.0-dev"
description = "\"High level DICOM file/network operations\""
authors = ["Brendan Moloney <moloney@ohsu.edu>"]
readme = "README.rst"
homepage = "https://github.com/moloney/dcm"
keywords = ["dicom", "network"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.scripts]
dcm = 'dcm.cli:cli'

[tool.poetry.dependencies]
python = "^3.8"
pynetdicom = "^2.0.2"
pydicom = "^2.1.2"
toml = "^0.10.2"
fifolock = "^0.0.20"
janus = "^0.6.1"
click = "^7.1.2"
tree-format = "^0.1.2"
rich = "^10.1.0"
typing-extensions = "^3.7.4"
dateparser = "^1.0.0"
# Newer tzlocal versions have issues with Ubuntu (at least 16.04?) see https://github.com/regebro/tzlocal/issues/122
tzlocal = "<3.0"
importlib-metadata = "^4.12.0"
attrs = "^22.2.0"
cattrs = "^22.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.12.0"
ipython = "^7.22.0"
pytest = "^6.2.3"
black = "^20.8b1"
psutil = "^5.8.0"
pytest-asyncio = "^0.14.0"
pytest-mypy = "^0.8.1"
pytest-black = "^0.3.12"
tox-pyenv = "^1.1.0"
pytest-cov = "^2.11.1"
types-toml = "^0.1.5"
types-dateparser = "^1.0.1"
SQLAlchemy = "^1.4.37"
Sphinx = "^5.1.1"
furo = "^2022.6.21"
autodocsumm = "^0.2.9"
mypy = "^0.991"
tox = "<4.0"
tox-poetry-installer = {extras = ["poetry"], version = "^0.10.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# mypy global options:

[tool.mypy]
ignore_missing_imports = true
files = "dcm/**/*.py"

# mypy per-module options:

[[tool.mypy.overrides]]
module=[
    "dcm.store.*",
    "dcm.report.*",
    "dcm.util",
    "dcm.query",
    "dcm.net",
    "dcm.filt",
    "dcm.route",
    "dcm.router",
    "dcm.sync",
    "dcm.conf",
    "dcm.lazyset",
    "dcm.filt",
    "dcm.diff",
    "dcm.node",
]
disallow_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = "dcm.tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = "dcm/"
required_plugins = ["pytest-asyncio", "pytest-mypy", "pytest-black"]
addopts = "--mypy --black --cov=dcm/ --cov-report=term --cov-report=xml"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38,py39,py310,py311

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
poetry_dep_groups = 
    dev
commands =
    pytest dcm/ --slow --disable-backend dcmtk
"""
